--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing = "20">
             <tr>
-                <td><img src="https://hosting.photobucket.com/images/i/David_Hammond01/David.png?width=320&height=320&fit=bounds"></td>
+                <td><img src="David.png"></td>
                 <td><h1>David Hammond</h1>
                     <em>Computer Science Student at <strong><a href="https://catalog.utsa.edu/undergraduate/sciences/computerscience/">UTSA</a></strong></em>
                         <p>I am currently a computer science undergaduate student, working full-time at a small robotics company in Austin, Texas. I have a goals of becoming a software developer once I graduate.  I am actively looking for Internships and Sidework.  Always wanting to learn more and become more proficient in my programming journey.<hr></td>
